Added some material design UI

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -27,6 +27,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
+                android:id="@+id/edit_area"
                 android:layout_height="wrap_content">
 
 
@@ -39,7 +40,7 @@
                     android:paddingRight="16dp"
                     >
 
-                    <com.example.android.graduationdemo.view.MyEditText
+                    <EditText
                         android:id="@+id/email_login"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -60,7 +61,7 @@
                     android:paddingRight="16dp"
                     >
 
-                    <com.example.android.graduationdemo.view.MyEditText
+                    <EditText
                         android:id="@+id/password_login"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -74,28 +75,44 @@
 
             </LinearLayout>
 
-
-            <Button
+            <com.andexert.library.RippleView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/login_btn"
-                android:background="#de562a"
-                android:layout_margin="16dp"
-                android:textAllCaps="false"
-                android:textStyle="bold"
-                android:text="Log in"/>
+                android:id="@+id/ripple_view"
+                >
+
+                <com.dd.CircularProgressButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/circleloginbtn"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="34dp"
+                    android:layout_marginRight="34dp"
+                    android:textAllCaps="false"
+                    app:cpb_cornerRadius="48dp"
+                    app:cpb_iconComplete="@drawable/ic_action_accept"
+                    app:cpb_iconError="@drawable/ic_action_cancel"
+                    app:cpb_textIdle="Log in"
+                    android:textColor="#ffffff"
+                    app:cpb_selectorIdle="@drawable/state_selector"
+                    />
+
+
+            </com.andexert.library.RippleView>
+
+
 
             <TextView android:id="@+id/link_signup"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"
-                android:text="need an account?"
+                android:text="@string/need_acc"
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textColor="#000000"
                 android:textSize="12sp"/>
-
 
 
             <ProgressBar
@@ -107,9 +124,6 @@
 
         </LinearLayout>
 
-
     </FrameLayout>
-
-
 
 </ScrollView>
