--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -5,7 +5,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.example.android.graduationdemo.controller.DetailedActivity">
+tools:context="com.example.android.graduationdemo.firstaid.DetailedActivity">
 <LinearLayout
     android:id="@+id/activity_detailed"
     android:layout_width="match_parent"
@@ -20,6 +20,7 @@ tools:context="com.example.android.graduationdemo.controller.DetailedActivity">
         android:layout_gravity="center"
         android:scaleType="fitXY"
         />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,13 +29,35 @@ tools:context="com.example.android.graduationdemo.controller.DetailedActivity">
         android:textStyle="bold"
         android:padding="8dp"
         android:textSize="20sp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Signs:-"
-        android:id="@+id/sign_aid"
-        android:padding="8dp"
-        android:textSize="15sp"/>
+
+
+
+        <com.ms.square.android.expandabletextview.ExpandableTextView
+            android:layout_width="match_parent"
+            android:id="@+id/expandable_text_view"
+            app:maxCollapsedLines="4"
+            app:animDuration="200"
+            android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Signs:-"
+            android:id="@+id/expandable_text"
+            android:padding="8dp"
+            android:textSize="15sp"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/expand_collapse"
+                android:layout_gravity="bottom|right"
+                android:background="@android:color/transparent"
+                android:padding="16dp"
+                />
+        </com.ms.square.android.expandabletextview.ExpandableTextView>
+
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,6 +66,7 @@ tools:context="com.example.android.graduationdemo.controller.DetailedActivity">
         android:textStyle="bold"
         android:padding="8dp"
         android:textSize="20sp"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
