--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.example.android.graduationdemo.firstaid.DetailedActivity">
-<LinearLayout
+    android:background="#ffffff"
+
+    tools:context="com.example.android.graduationdemo.controller.DetailedActivity">
+
+
+    <LinearLayout
     android:id="@+id/activity_detailed"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:theme="?attr/actionBarTheme"
+            android:minHeight="?attr/actionBarSize"
+            android:id="@+id/toolbar" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -25,44 +36,35 @@ tools:context="com.example.android.graduationdemo.firstaid.DetailedActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Signs:"
-        android:textColor="#000000"
+        android:textColor="#26547C"
         android:textStyle="bold"
         android:padding="8dp"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:id="@+id/textView" />
 
-
-
-        <com.ms.square.android.expandabletextview.ExpandableTextView
-            android:layout_width="match_parent"
-            android:id="@+id/expandable_text_view"
-            app:maxCollapsedLines="4"
-            app:animDuration="200"
-            android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Signs:-"
-            android:id="@+id/expandable_text"
+            android:id="@+id/signs_aid"
             android:padding="8dp"
+            android:textColor="#de562a"
             android:textSize="15sp"/>
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/expand_collapse"
-                android:layout_gravity="bottom|right"
-                android:background="@android:color/transparent"
-                android:padding="16dp"
-                />
-        </com.ms.square.android.expandabletextview.ExpandableTextView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="?attr/colorPrimary"
+        android:paddingTop="16dp"
+        android:padding="16dp"
 
-
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Aid:"
-        android:textColor="#000000"
+        android:textColor="#26547C"
         android:textStyle="bold"
         android:padding="8dp"
         android:textSize="20sp"/>
@@ -70,9 +72,10 @@ tools:context="com.example.android.graduationdemo.firstaid.DetailedActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Signs:-"
+        tools:text="Aid:-"
         android:id="@+id/cure_aid"
         android:padding="8dp"
+        android:textColor="#de562a"
         android:textSize="15sp"/>
 </LinearLayout>
 </ScrollView>
