--- a/app/src/main/res/layout/activity_first_aid.xml
+++ b/app/src/main/res/layout/activity_first_aid.xml
@@ -5,59 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
+    android:background="#FAFAFA"
     >
-
-<android.support.design.widget.CoordinatorLayout
-
-android:id="@+id/main_content"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-    >
-
-<android.support.design.widget.AppBarLayout
-    android:id="@+id/appbar"
-    android:layout_width="match_parent"
-    android:layout_height="256dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-    <android.support.design.widget.CollapsingToolbarLayout
-        android:id="@+id/collapsing_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:statusBarScrim="@null"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-        <ImageView
-        android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/grayheader"
-        android:fitsSystemWindows="true"
-        android:scaleType="centerCrop"
-        app:layout_collapseMode="parallax" />
-
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_collapseMode="parallax" />
-
-    </android.support.design.widget.CollapsingToolbarLayout>
-
-
-</android.support.design.widget.AppBarLayout>
-
-
-
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:theme="?attr/actionBarTheme"
+            android:minHeight="?attr/actionBarSize"
+            android:id="@+id/toolbar" />
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/firstaidrecyclerview"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
-</android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
