--- a/app/src/main/res/layout/one_row_recycler.xml
+++ b/app/src/main/res/layout/one_row_recycler.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="match_parent"
+
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="8dp"
-    app:cardBackgroundColor="#797979"
-    android:layout_margin="8dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    >
+
+
 <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    >
 
 
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/one_row_image"
         tools:src="@drawable/asthmaicon"
         android:layout_weight="1"
@@ -35,7 +35,25 @@
         android:padding="16dp"
         android:gravity="center"
         android:layout_weight="5"
-        android:textColor="#ffffff"
+        android:textColor="#26547C"
+        />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/expand_collapse"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/right_black_24dp"
+        android:background="@android:color/transparent"
+        android:padding="16dp"
+        />
+
+</LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#de562a"
+
         />
 </LinearLayout>
-</android.support.v7.widget.CardView>
